fixed line spacing on info card

--- a/assets/css/geo.css
+++ b/assets/css/geo.css
@@ -57,14 +57,15 @@
 
 }
 
-.painting-info, .painting-info2 {
+.painting-info, .painting-info2, .painting-info3 {
     margin: 0;
-    line-height: 120%;
+    line-height: 140%;
+    font-weight: normal;
 }
 
 .time {
 
-    margin-top: 11vh;
+    margin-top: 12vh;
     padding: 20px;
 
 }
@@ -87,7 +88,7 @@
 
 .greeting {
     position: relative;
-    bottom: -8vh;
+    bottom: -9vh;
     margin: 0;
     padding: 0;
     font-size: 1.5em;
@@ -95,7 +96,7 @@
 
 .main-container {
     position: relative;
-    height: 35vh;
+    height: 34vh;
     padding: 20px;
    /* width: 600px; */
 }
@@ -128,8 +129,8 @@
     height: 100%;
     backface-visibility: hidden;
     transform: rotateY(180deg);
-    font-size: .95em;
-    padding: 0 10px;
+    font-size: 1.1em;
+    padding: 0 20px;
     letter-spacing: 0px;
 
 }
@@ -144,3 +145,15 @@
     max-height: 50vh;
 }
 
+#no-padding {
+    padding: 0;
+}
+
+h5.artist-name {
+    margin-bottom: 0 !important; 
+    padding-bottom: 0 !important; 
+}
+
+h5.painting-name {
+    margin-top: 10px !important;
+}
